syntax = "proto3";
option go_package = "./proto";

package proto;

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse) {}

    rpc SignUp (SignUpRequest) returns (CommResponse) {}

    rpc EditProfile (EditRequest) returns (CommResponse) {}

    rpc GetUserInfo (CommRequest) returns (LoginResponse) {}

    rpc CreatePost (PostRequest) returns (CommResponse) {}

    rpc GetPosts (CommRequest) returns (PostResponse) {}

    rpc Follow (FollowRequest) returns (CommResponse) {}

    rpc Unfollow (FollowRequest) returns (CommResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string username = 1;
    string profilename = 2;
    string profileimg = 3;
    string status = 4;
    string msg = 5;
}

message SignUpRequest {
    string username = 1;
    string password = 2;
    string profilename = 3;
    string profileimg = 4;
}

message EditRequest {
    string username = 1;
    string profilename = 2;
    string profileimg = 3;
}

message CommRequest {
    string username = 1;
}

message CommResponse {
    string status = 1;
    string msg = 2;
}

message FollowRequest {
    string username1 = 1;
    string username2 = 2;
}

message PostRequest {
    string username = 1;
    string profilename = 2;
    string profileimg = 3;
    string text = 4;
    string img = 5;
    string time = 6;
}

message PostResponse {
    message post {
        int32 id = 1;
        string username = 2;
        string profilename = 3;
        string profileimg = 4;
        string text = 5;
        string img = 6;
        string time = 7;
    }
    repeated post posts = 1;
}